Blackpurl/src/objects/CO_Invoice_Header__c.object
<CustomObject>
    <fields>
        <fullName>AccountingIdForCOInvoicePayment__c</fullName>
        <label>AccountingIdForCOInvoicePayment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountingId__c</fullName>
        <label>AccountingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountingResponseForCOInvoicePayment__c</fullName>
        <label>AccountingResponseForCOInvoicePayment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccountingResponseForJournalEntry__c</fullName>
        <description>AccountingResponse For JournalEntry</description>
        <label>AccountingResponseForJournalEntry</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccountingResponse__c</fullName>
        <label>AccountingResponse</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AutoNumberHolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AutoNumberHolder</label>
        <referenceTo>AutoNumberHolder__c</referenceTo>
        <relationshipLabel>CO Invoice Headers</relationshipLabel>
        <relationshipName>CO_Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_CO_Invoice_JE_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero CO Invoice JE Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Invoice_Payment_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Invoice Payment Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO_Header__c</fullName>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>CO Invoice Headers</relationshipLabel>
        <relationshipName>CO_Invoice_Headers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Checkout_Type__c</fullName>
        <label>Checkout Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Third-Party</fullName>
                </value>
                <value>
                    <fullName>Deal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
<fields>
        <fullName>Closed_Invoice_Date__c</fullName>
        <description>It is used to store date when invoice action has happened</description>
        <label>Closed Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Commission__c</fullName>
        <label>Deal Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Cost__c</fullName>
        <label>Deal Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Profitability__c</fullName>
        <formula>IF( Is_Deal_Invoiced__c , IF( $Setup.Configurations__c.Tax_Included_Pricing__c, Sub_Total__c - Stamp_Duty_Total__c - Fee_Total_Excluded_In_Profitability__c - SalesTax_Total__c - Deal_Cost__c, Sub_Total__c - Stamp_Duty_Total__c - Fee_Total_Excluded_In_Profitability__c - Deal_Cost__c - Trade_In_Total__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Profitability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible_Total__c</fullName>
        <label>Deductible Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_I_Total__c</fullName>
        <label>F I Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Total_Excluded_In_Profitability__c</fullName>
        <label>Fee Total Excluded In Profitability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Total__c</fullName>
        <label>Fee Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Cost__c</fullName>
        <label>Invoice Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_Formula__c</fullName>
        <formula>DATEVALUE(Invoice_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <formula>AutoNumberHolder__r.Name</formula>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Profitability__c</fullName>
        <formula>IF( ISPICKVAL(CO_Header__r.CO_Type__c, &apos;Internal Service&apos;), 0,  IF($Setup.Configurations__c.Tax_Included_Pricing__c, Sub_Total__c - Stamp_Duty_Total__c - Fee_Total_Excluded_In_Profitability__c - SalesTax_Total__c - Invoice_Cost__c, Sub_Total__c - Stamp_Duty_Total__c - Fee_Total_Excluded_In_Profitability__c - Invoice_Cost__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Profitability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Charge_Account_Payment_Exists__c</fullName>
        <label>Is_Charge_Account_Payment_Exists</label>
        <summaryFilterItems>
            <field>CO_Invoice_Payment__c.Payment_Method__c</field>
            <operation>equals</operation>
            <value>Charge Account</value>
        </summaryFilterItems>
        <summaryForeignKey>CO_Invoice_Payment__c.CO_Invoice_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Deal_Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deal Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Discount_Shown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Discount Shown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JournalEntryAccountingId__c</fullName>
        <label>JournalEntryAccountingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labour_Total__c</fullName>
        <label>Labour Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lien_Payout_Total__c</fullName>
        <description>Used For Deal Trade In Units- Lien Payout Total Amount</description>
        <label>Lien Payout Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Taxable_Total__c</fullName>
        <label>Non-Taxable Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Product_Total__c</fullName>
        <label>Other Product Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_Total__c</fullName>
        <label>Part Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Fee_Total__c</fullName>
        <label>Pre Tax Fee Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Labour_Total__c</fullName>
        <label>Pre Tax Labour Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Other_Product_Total__c</fullName>
        <label>Pre Tax Other Product Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Part_Total__c</fullName>
        <label>Pre Tax Part Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Shop_Supplies_Total__c</fullName>
        <label>Pre Tax Shop Supplies Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Sublet_Total__c</fullName>
        <label>Pre Tax Sublet Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Trade_In_Total__c</fullName>
        <label>Pre Tax Trade In Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Unit_Total__c</fullName>
        <label>Pre Tax Unit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Warranty_Product_Total__c</fullName>
        <label>Pre Tax Warranty Product Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Total__c</fullName>
        <label>Product Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesTax_Total__c</fullName>
        <label>SalesTax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <label>Salesperson</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Tag__c</fullName>
        <description>Used for Searching in Home Search</description>
        <label>Search Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shop_Supplies_Total__c</fullName>
        <label>Shop Supplies Total</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stamp_Duty_Total__c</fullName>
        <label>Stamp Duty Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT( Invoice_Status__c )</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <formula>IF($Setup.Configurations__c.Tax_Included_Pricing__c, Total__c, Total__c - SalesTax_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sublet_Total__c</fullName>
        <label>Sublet Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SyncTokenForCOInvoicePayment__c</fullName>
        <label>SyncTokenForCOInvoicePayment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncTokenForJournalEntry__c</fullName>
        <description>SyncToken For JournalEntry</description>
        <label>SyncTokenForJournalEntry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncToken__c</fullName>
        <label>SyncToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxable_Total__c</fullName>
        <label>Taxable Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Except_Charge_Account__c</fullName>
        <description>This field is used in MYOB invoice payment export file to include paid amount except charge on account.
Also used for QB payments syncing on invoice.</description>
        <label>Total Amount Except Charge Account</label>
        <summarizedField>CO_Invoice_Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>CO_Invoice_Payment__c.Payment_Method__c</field>
            <operation>notEqual</operation>
            <value>Charge Account</value>
        </summaryFilterItems>
        <summaryForeignKey>CO_Invoice_Payment__c.CO_Invoice_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Fee_With_Shop_Supplies__c</fullName>
        <formula>Pre_Tax_Fee_Total__c + Pre_Tax_Shop_Supplies_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fee With Shop Supplies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payment__c</fullName>
        <label>Total Payment</label>
        <summarizedField>CO_Invoice_Payment__c.Amount__c</summarizedField>
        <summaryForeignKey>CO_Invoice_Payment__c.CO_Invoice_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_In_Total__c</fullName>
        <label>Trade In Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Total__c</fullName>
        <label>Unit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Warranty_Product_Total__c</fullName>
        <label>Warranty Product Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_CO_Invoice_JE_Accounting_Id__c</fullName>
        <label>Xero CO Invoice JE Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_CO_Invoice_Payment_Accounting_Id__c</fullName>
        <label>Xero CO Invoice Payment Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountingLastSyncTimeForCOInvPayment__c</fullName>
        <label>accountingLastSyncTimeForCOInvPayment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>accountingLastSyncTimeForJE__c</fullName>
        <label>accountingLastSyncTimeForJE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>accountingLastSyncTime__c</fullName>
        <label>accountingLastSyncTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>availForQBCOInvoicePayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>availForQBCOInvoicePayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>availForQBJournalEntrySync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>availForQBJournalEntrySync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>availForQBSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>availForQBSync</label>
        <type>Checkbox</type>
    </fields>
    <label>CO Invoice Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CO_Header__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Status__c</columns>
        <columns>CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_CO_Invoices_For_Inv_Payment</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>availForQBCOInvoicePayment__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB CO Invoice Payments</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_Customer_Order_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Total__c</columns>
        <columns>Checkout_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>availForQBSync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB Customer Order Invoices</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_Customer_Order_Invoices_For_JE</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>availForQBJournalEntrySync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB Customer Order Invoices For JE</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000000}</displayFormat>
        <label>CO Invoice Header Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO Invoice Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>